--- a/BTE320_In_class_assignments.ipynb
+++ b/BTE320_In_class_assignments.ipynb
@@ -26,14 +26,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Shape Area Calculator"
+      ],
+      "metadata": {
+        "id": "cJPFbsMrh-Uu"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "C4kA0w46kJSs",
-        "outputId": "691619f8-0b0d-4b30-a1b6-da8ffd02f165"
+        "outputId": "2ea8b73c-a5b9-4f56-fe2d-305051dfa175"
       },
       "outputs": [
         {
@@ -54,9 +63,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "While loop Rock, Paper, Scissors"
+      ],
+      "metadata": {
+        "id": "JtMEhQsUiCIb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
         "Play=input(f'Would you like to play Rock, Paper, Scissors? ')\n",
         "while Play=='Yes':\n",
         "  print('Rock... Paper... Scissors... Shoot!')\n",
@@ -86,7 +103,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02fc35da-6fd8-4484-dcd4-82a653216f27",
+        "outputId": "60852923-7729-4296-e213-4831c10c2a48",
         "id": "CgTur7zkymg1"
       },
       "execution_count": null,
@@ -95,19 +112,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Would you like to play Rock, Paper, Scissors? Yes\n",
-            "Rock... Paper... Scissors... Shoot!\n",
-            "Select Player 1 Rock, Paper, or Scissors: Rock\n",
-            "Computer Wins\n",
-            "Do you want to play again? Yes\n",
-            "Rock... Paper... Scissors... Shoot!\n",
-            "Select Player 1 Rock, Paper, or Scissors: Paper\n",
-            "Player 1 Wins\n",
-            "Do you want to play again? no\n",
+            "Would you like to play Rock, Paper, Scissors? no\n",
             "Have a Nice Day\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Numerical calculator"
+      ],
+      "metadata": {
+        "id": "-naQippXiHRu"
+      }
     },
     {
       "cell_type": "code",
@@ -155,6 +173,61 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Parking Garage"
+      ],
+      "metadata": {
+        "id": "666GuQvO8W_Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,9,1):\n",
+        "  if i <= 2:\n",
+        "    cost = 10\n",
+        "  elif i<= 5:\n",
+        "    cost = 10+(i-2)*2.5\n",
+        "  else:\n",
+        "    cost = 20\n",
+        "  print(i,' ',cost)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XCk_YJop8ZMA",
+        "outputId": "e57ae1f7-d0df-4396-f1b9-085265f672d4"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1   10\n",
+            "2   10\n",
+            "3   12.5\n",
+            "4   15.0\n",
+            "5   17.5\n",
+            "6   20\n",
+            "7   20\n",
+            "8   20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Movie Theater"
+      ],
+      "metadata": {
+        "id": "ANm-lIbDiijF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "ticketcost=10\n",
@@ -194,100 +267,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "i = 0\n",
-        "\n",
-        "while True:\n",
-        "  i=i+1\n",
-        "  if i == 10:\n",
-        "    break\n",
-        "  print(i, end = ' ')\n",
-        "\n",
-        "print('Done.')"
+        "Months to Numbers Dictionary"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ze2vSqq3Kk2v",
-        "outputId": "98f403c6-9533-47cc-9faf-d760dbd51259"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 2 3 4 5 6 7 8 9 Done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "item= int(input('Please Input an Integer: '))\n",
-        "l = []\n",
-        "while item != 0:\n",
-        "  l.append(item)\n",
-        "  item=int(input('Please Input an Integer:'))\n",
-        "  if item == 0:\n",
-        "    print(l)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rNo5h9rkIuwF",
-        "outputId": "d8c40e97-1b77-4195-dcbd-3f4baf45e100"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Please Input an Integer: 1\n",
-            "Please Input an Integer:2\n",
-            "Please Input an Integer:3\n",
-            "Please Input an Integer:-100\n",
-            "Please Input an Integer:0\n",
-            "[1, 2, 3, -100]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "l1=[1,2,3,4]\n",
-        "l2=[1,2,5,6]\n",
-        "\n",
-        "for item in l1[:]:\n",
-        "  if item in l2:\n",
-        "    l1.remove(item)\n",
-        "\n",
-        "print(l1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "blBIvMS_NXO6",
-        "outputId": "56a23543-61c0-418f-848e-729c86955938"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[3, 4]\n"
-          ]
-        }
-      ]
+        "id": "qFPZyVrVic8R"
+      }
     },
     {
       "cell_type": "code",
@@ -335,128 +321,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "total_cost = float(input('What is the cost of your dream home?: '))\n",
-        "annual_salary = float(input('What is your annual salary?: '))\n",
-        "portion_saved = float(input('What percentage of your salary would you like to save? (In decimal Form): '))\n",
-        "portion_down_payment = 0.25\n",
-        "down_payment = total_cost*portion_down_payment\n",
-        "r = 0.04\n",
-        "monthly_r = r/12\n",
-        "monthly_salary = annual_salary/12\n",
-        "monthly_savings = monthly_salary*portion_saved\n",
-        "n=0\n",
-        "current_savings = 0\n",
-        "\n",
-        "n=1\n",
-        "while current_savings < down_payment:\n",
-        "  n=n+1\n",
-        "  current_savings = monthly_savings*((((((1+monthly_r)**n)-1)/monthly_r))*(1+monthly_r))\n",
-        "print(f'Number of months: {n}')"
+        "Fee Calculation and Display Functions"
       ],
       "metadata": {
-        "id": "FIk4Neohpoks",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e4e54389-4274-4040-db6b-9f37136c0a0b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "What is the cost of your dream home?: 100\n",
-            "What is your annual salary?: 10\n",
-            "What percentage of your salary would you like to save? (In decimal Form): .1\n",
-            "Number of months: 208\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "total_cost = float(input('What is the cost of your dream home?: '))\n",
-        "annual_salary = float(input('What is your annual salary?: '))\n",
-        "portion_saved = float(input('What percentage of your salary would you like to save? (In decimal Form): '))\n",
-        "semi_annual_raise = float(input('What is your semi-annual raise? (In decimal Form): '))\n",
-        "portion_down_payment = 0.25\n",
-        "down_payment = total_cost*portion_down_payment\n",
-        "r = 0.04\n",
-        "monthly_r = r/12\n",
-        "monthly_salary = annual_salary/12\n",
-        "monthly_savings = monthly_salary*portion_saved\n",
-        "n=0\n",
-        "current_savings = 0\n",
-        "\n",
-        "n=1\n",
-        "while current_savings < down_payment:\n",
-        "  n=n+1\n",
-        "  if n%6==0:\n",
-        "    annual_salary = annual_salary*(1+semi_annual_raise)\n",
-        "    monthly_salary = annual_salary/12\n",
-        "    monthly_savings = monthly_salary*portion_saved\n",
-        "  current_savings = monthly_savings*((((((1+monthly_r)**n)-1)/monthly_r))*(1+monthly_r))\n",
-        "print(f'Number of months: {n}')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4f77cadc-60cc-4434-c809-6204573cbd31",
-        "id": "u8y6YY-uVfLL"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "What is the cost of your dream home?: 100\n",
-            "What is your annual salary?: 10\n",
-            "What percentage of your salary would you like to save? (In decimal Form): .1\n",
-            "What is your semi-annual raise? (In decimal Form): .03\n",
-            "Number of months: 129\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def range_check(num, low, high,):\n",
-        "      if num >= low and num <= high:\n",
-        "        return 'In Range'\n",
-        "      else:\n",
-        "        return 'Out of Range'\n",
-        "x=float(input('Give any number: '))\n",
-        "y=float(input('Give the low end of your range: '))\n",
-        "z=float(input('Give the high end of your range: '))\n",
-        "print(range_check(x,y,z))"
-      ],
-      "metadata": {
-        "id": "10wiYslSp0Ru",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "46bdf070-bc96-4dcb-d05b-aeae998bc880"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Give any number: 10\n",
-            "Give the low end of your range: 0\n",
-            "Give the high end of your range: 10\n",
-            "In Range\n"
-          ]
-        }
-      ]
+        "id": "nIlYUrttiYZN"
+      }
     },
     {
       "cell_type": "code",
@@ -521,6 +392,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Reverse Function"
+      ],
+      "metadata": {
+        "id": "83B2WJQYi8p6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def reverse_string(s):\n",
@@ -538,93 +418,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-oAcSCVTHX-o",
-        "outputId": "e0290085-b5cf-42f8-de32-4d40ab196b92"
+        "outputId": "4f70b701-0144-4a03-c398-96aed196d1cc"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input a String: PooP\n",
-            "Reversed String: PooP\n"
+            "Input a String: BTE320\n",
+            "Reversed String: 023ETB\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def wAVG(L,w):\n",
-        "  try:\n",
-        "    return sum(L[i]*w[i] for i in range(len(L)))/sum(w)\n",
-        "  except ZeroDivisionError:\n",
-        "    print('Divide by Zero Error')\n",
-        "  except TypeError:\n",
-        "    print('Type Error')\n",
-        "  else:\n",
-        "    return float('nan')\n",
-        "wAVG([1,2,3,4],[.2,.3,.4,.5])\n"
+        "Student Class"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UD7CaFzff6ZH",
-        "outputId": "4a7246d3-b6e6-4954-fbaf-efc1b03d0734"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2.857142857142857"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def wAVG(L,w):\n",
-        "  try:\n",
-        "    res = []\n",
-        "    for i in range(len(L)):\n",
-        "      res.append(L[i]*w[i])\n",
-        "    return sum(res)/sum(w)\n",
-        "  except ZeroDivisionError:\n",
-        "    return []\n",
-        "  except TypeError:\n",
-        "    return []\n",
-        "  else:\n",
-        "    return float('nan')\n",
-        "\n",
-        "wAVG([1,2,3,4],[.2,.3,.4,.5])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tlts3gNchx2G",
-        "outputId": "95eb3edd-c011-421d-cdc3-6b28f559c896"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2.857142857142857"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
+        "id": "Ym1hW7-sjGIQ"
+      }
     },
     {
       "cell_type": "code",
@@ -655,126 +470,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1 = Student('Bob', 12345, [])"
-      ],
-      "metadata": {
-        "id": "RooiSygWpnnI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1.enroll('Math')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "id": "ya1JdO7GZeGw",
-        "outputId": "819cf72d-c030-43d1-f140-c91aee5ae78b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Enrolled in Math'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 50
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1.enroll('English')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "id": "K06XkvLDvLgi",
-        "outputId": "fb067cef-eb5c-41d0-9cb4-4bf7d88ea483"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Enrolled in English'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 51
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1.enroll('Math')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "okE38iIdvORS",
-        "outputId": "ecc08094-84e3-4164-fe74-60236b3f6a25"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Already Enrolled\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1.get_courses()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qozN4DiSvRKA",
-        "outputId": "c70a0004-0756-44f2-e8ad-3f057e4c7096"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Math', 'English']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 53
-        }
-      ]
     }
   ]
 }
